--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.tianyu.killer"
+        applicationId "com.mcal.apkkiller"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 3
-        versionName "3.0"
+        versionCode 4
+        versionName "4.0"
     }
 
     buildTypes {
@@ -47,7 +47,7 @@ dependencies {
     implementation project(':filepicker')
     implementation project(':dx')
 
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
