--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.mcal.apkkiller">
+    package="com.mcal.apksignkill">
     <!-- Изменение/удаление данных на USB-накопителе -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -11,7 +11,7 @@
         tools:ignore="QueryAllPackagesPermission" />
 
     <application
-        android:name="com.signs.yowal.App"
+        android:name="com.mcal.apksignkill.App"
         android:requestLegacyExternalStorage="true"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.SignatureKill">
         <activity
             android:label="@string/app_name"
-            android:name="com.signs.yowal.activities.MainActivity">
+            android:name="com.mcal.apksignkill.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -31,7 +31,7 @@
         <activity
             android:label="Application Error"
             android:theme="@style/Theme.SignatureKill"
-            android:name="com.signs.yowal.activities.ExceptionActivity" />
+            android:name="com.mcal.apksignkill.activities.ExceptionActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
