--- a/dx/build.gradle
+++ b/dx/build.gradle
@@ -17,6 +17,7 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+    namespace 'com.mcal.dx'
 }
 
 dependencies {
